# amphiquantic

./: .gitignore  0_build_pdbviz.sh  1_ct-git-ginored.sh  1_demo_script.sh  README.md  build  examples.txt  qchem631gstar.py  requirements.txt  run  run.sh  run_steps  run_workflow  setup.py  workflow
amphiquantic/: python_activate.sh
amphiquantic/file/pdb/: __init__.py  __main__.py
amphiquantic/molecule/: plot.py
amphiquantic/utils/: data.py  mappings.py  mappings_numba.py  rcsb.py
notebooks/: pdb.ipynb
pdbviz/: Cargo.toml
pdbviz/src/: atom.rs  bonds.rs  lib.rs  pdb.rs
rust/: Cargo.toml  build.rs  pyproject.toml  set_data_path.sh
rust/data/: atom_properties.yml  bond_distances.yml
rust/data/shaders/: minimize.wgsl  relax.wgsl  simulate.wgsl
rust/src/: atom.rs  bonds.rs  compute_pipeline.rs  lib.rs  minimization.rs  pdb.rs  simulation.rs  utils.rs
rust/src/builder/: ions.rs  mod.rs  solvation.rs
rust/src/utilities/: atom.rs  bonds.rs  mod.rs  shader.rs  utils.rs
scripts/: 0_build_pdbviz.sh  1_demo_script.sh  2_param_script.sh  3_minimize.sh  run_steps  run_workflow
scripts/demos/: plot_determined_bonds.sh
scripts/minimal/: parameterize.sh  setup.sh
scripts/steps/: python_install.sh  rust_build.sh  settings
scripts/steps/demos/: plot_determined_bonds.sh
scripts/steps/minimal/: plot.sh
step_scripts/minimal/: prepare.sh
