[package]
name = "pdbviz"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pdbviz"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
ndarray = "0.15.6"
numpy = "0.21.0"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
