[package]
name = "rustquantic"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustquantic"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
lazy_static = "1.4.0"
ndarray = "0.15.6"
nom = "7.1.3"
numpy = "0.21.0"
pollster = "0.3.0"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
wgpu = "0.20.0"
wgpu-hal = "0.20.0"
