[package]
name = "rustquantic"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustquantic"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
futures-intrusive = "0.5.0"
lazy_static = "1.4.0"
ndarray = "0.16.1"
nom = "7.1.3"
numpy = "0.22.1"
pollster = "0.4.0"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
wgpu = "23.0.0"
wgpu-hal = "23.0.0"
